--- a/pepeizqs deals web/Pages/Componentes/Admin/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Portada.razor
@@ -33,7 +33,7 @@
 </style>
 
 <li class="nav-item" style="margin-right: 30px;">
-    <button class="admin-boton-hover" @onmouseenter="(e => MostrarPestaña(e))" @onclick="(e => MostrarPestaña(e))">Admin @adminNuevosCorreosMensaje</button>
+    <button class="admin-boton-hover" @onmouseenter="(e => MostrarPestaña(e))" @onclick="(e => MostrarPestaña(e))">Admin @nuevosCorreosMensaje</button>
 </li>
 
 @if (mostrarPestaña == true)
@@ -45,16 +45,15 @@
 
         <div style="display: flex; align-items: start; margin-top: 40px; width: 100%; font-size: 18px;">
             <div style="width: 30%;">
-                <div class="perfil">
+                <div class="perfil" style="padding: 20px 30px; border: 1px solid var(--fondoBoton);">
                     <a href="https://win6052.site4now.net/stats/awstats.pl?config=1112749300&h=8d43503475c9993340908170c2f4b9da" style="text-decoration: none;">Visitas</a>
                     <a href="https://beta.pepeizqdeals.com/Admin/Tiendas" style="text-decoration: none; margin-top: 10px;">Tiendas</a>
-                    <a href="https://beta.pepeizqdeals.com/Admin/Pendientes" style="text-decoration: none; margin-top: 10px;">Pendientes</a>
-                    <a href="https://beta.pepeizqdeals.com/Admin/Errores" style="text-decoration: none; margin-top: 10px;">Errores @adminNuevosErroresMensaje</a>
+                    <a href="https://beta.pepeizqdeals.com/Admin/Pendientes" style="text-decoration: none; margin-top: 10px;">Pendientes @nuevosPendientesMensaje</a>
+                    <a href="https://beta.pepeizqdeals.com/Admin/Errores" style="text-decoration: none; margin-top: 10px;">Errores @nuevosErroresMensaje</a>
                 </div>
 
-                <label style="margin-top: 40px; padding-left: 40px;">Añadir</label>
-                <hr/>
-                <div class="perfil">
+                <label style="margin-top: 40px; padding-left: 30px; padding-bottom: 15px;">Añadir</label>
+                <div class="perfil" style="padding: 20px 30px; border: 1px solid var(--fondoBoton);">
                     <a href="https://beta.pepeizqdeals.com/Admin/Anadir" style="text-decoration: none;">Juego / DLC / Banda Sonora / Software</a>
                     <a href="https://beta.pepeizqdeals.com/Admin/Noticias" style="text-decoration: none; margin-top: 10px;">Noticias</a>
                     <a href="https://beta.pepeizqdeals.com/Admin/Bundles" style="text-decoration: none; margin-top: 10px;">Bundles</a>
@@ -65,23 +64,35 @@
             </div>
 
             <div style="width: 70%; padding-left: 40px; padding-right: 20px;">
-                <label style="padding-left: 40px;">Avisos</label>
-                <hr />
-                <div class="perfil">
-                    <div style="display: flex; align-items: center;">
-                        <label style="margin-right: 20px; min-width: 30px;">EN:</label>
-                        <textarea @oninput="@(e => ActualizarAviso(e, "en"))" class="entrada-texto" style="height: 35px;">@avisoEn</textarea>
-                    </div>
+                <button style="color: var(--colorTextoVisitado); background-color: transparent; border: 0px; padding-bottom: 15px; display: flex; align-items: center;" @onclick="(e => MostrarCerrarAvisos(e))">
+                    @if (mostrarAvisos == true)
+                    {
+                        <i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i>
+                    }
+                    else
+                    {
+                        <i class="fa-solid fa-arrow-down" style="font-size: 20px;"></i>
+                    }
 
-                    <div style="display: flex; align-items: center; margin-top: 20px;">
-                        <label style="margin-right: 20px; min-width: 30px;">ES:</label>
-                        <textarea @oninput="@(e => ActualizarAviso(e, "es"))" class="entrada-texto" style="height: 35px;">@avisoEs</textarea>
-                    </div>
+                    <div style="padding-left: 20px;">Avisos</div>
+                </button>
+                
+                @if (mostrarAvisos == true)
+                {
+                    <div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton);">
+                        <div style="display: flex; align-items: center;">
+                            <textarea @oninput="@(e => ActualizarAviso(e, "en"))" class="entrada-texto" style="height: 35px;" placeholder="EN">@avisoEn</textarea>
+                        </div>
 
-                    <button class="boton-pequeño" style="padding: 10px 15px; max-width: 250px; margin-top: 30px;" @onclick="@(e => BorrarAviso(e))">
-                        Borrar Aviso
-                    </button>
-                </div>
+                        <div style="display: flex; align-items: center; margin-top: 20px;">
+                            <textarea @oninput="@(e => ActualizarAviso(e, "es"))" class="entrada-texto" style="height: 35px;" placeholder="ES">@avisoEs</textarea>
+                        </div>
+
+                        <button class="boton-pequeño" style="padding: 10px 15px; max-width: 250px; margin-top: 30px;" @onclick="@(e => BorrarAviso(e))">
+                            Borrar Aviso
+                        </button>
+                    </div>
+                }              
             </div>
         </div>
     </div>
@@ -91,38 +102,49 @@
 
     #nullable disable
 
-    private int adminNuevosCorreos = 0;
-    private string adminNuevosCorreosMensaje = string.Empty;
-    private int adminNuevosErrores = 0;
-    private string adminNuevosErroresMensaje = string.Empty;
+    private int nuevosCorreos = 0;
+    private string nuevosCorreosMensaje = string.Empty;
+    private int nuevosPendientes = 0;
+    private string nuevosPendientesMensaje = string.Empty;
+    private int nuevosErrores = 0;
+    private string nuevosErroresMensaje = string.Empty;
 
     private bool mostrarPestaña = false;
 
     protected override void OnInitialized()
     {
-        SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+        nuevosCorreos = Herramientas.Correos.ComprobarNuevosCorreos();
 
-        adminNuevosCorreos = Herramientas.Correos.ComprobarNuevosCorreos();
-
-        if (adminNuevosCorreos > 0)
+        if (nuevosCorreos > 0)
         {
-            if (adminNuevosCorreos == 1)
+            if (nuevosCorreos == 1)
             {
-                adminNuevosCorreosMensaje = "• 1 Nuevo Correo";
+                nuevosCorreosMensaje = "• 1 Nuevo Correo";
             }
-            else if (adminNuevosCorreos > 1)
+            else if (nuevosCorreos > 1)
             {
-                adminNuevosCorreosMensaje = "• " + adminNuevosCorreos.ToString() + " Nuevos Correos";
+                nuevosCorreosMensaje = "• " + nuevosCorreos.ToString() + " Nuevos Correos";
             }
         }
 
+        SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+
         using (conexion)
         {
-            adminNuevosErrores = BaseDatos.Errores.Buscar.Todos(conexion).Count;
+            nuevosPendientes = BaseDatos.Pendientes.Buscar.Todos(conexion).Count;
 
-            if (adminNuevosErrores > 0)
+            if (nuevosPendientes > 0)
             {
-                adminNuevosErroresMensaje = "(" + adminNuevosErrores.ToString() + ")";
+                nuevosPendientesMensaje = "(" + nuevosPendientes.ToString() + ")";
+            }
+
+            //----------------------------------
+
+            nuevosErrores = BaseDatos.Errores.Buscar.Todos(conexion).Count;
+
+            if (nuevosErrores > 0)
+            {
+                nuevosErroresMensaje = "(" + nuevosErrores.ToString() + ")";
             }
 
             //----------------------------------
@@ -133,7 +155,7 @@
             {
                 avisoEn = aviso1.Mensaje;
             }
-            
+
             Aviso aviso2 = BaseDatos.Avisos.Buscar.Ejecutar("es", conexion);
 
             if (aviso2 != null)
@@ -141,7 +163,7 @@
                 avisoEs = aviso2.Mensaje;
             }
         }
-        
+
     }
 
     private void MostrarPestaña(MouseEventArgs e)
@@ -156,8 +178,21 @@
 
     #region Avisos
 
+    private bool mostrarAvisos = false;
     private string avisoEn = string.Empty;
     private string avisoEs = string.Empty;
+
+    private void MostrarCerrarAvisos(MouseEventArgs e)
+    {
+        if (mostrarAvisos == true)
+        {
+            mostrarAvisos = false;
+        }
+        else
+        {
+            mostrarAvisos = true;
+        }
+    }
 
     private void ActualizarAviso(ChangeEventArgs texto, string idioma)
     {
